fix(mobile): resolve uneven margin in main element

--- a/client/src/styles/Footer.module.scss
+++ b/client/src/styles/Footer.module.scss
@@ -122,7 +122,7 @@ footer {
   }
 
   .credits {
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     p {
       font-size: 0.8rem;
       margin: 0;
